Removed z-index that is causing the popup with the operators to be below the 'add a step' button. Apparently this z-index:2 was not needed. This fixes issue #237

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -306,7 +306,6 @@ a.delete {
 .new-sub-action {
   padding: 10px 20px;
   position: relative;
-  z-index: 2;
 }
 
 .text {
